@@ -820,6 +820,8 @@ int starpu_init(struct starpu_conf *user_conf)
 	/* Launch "basic" workers (ie. non-combined workers) */
 	_starpu_launch_drivers(&config);
 
+	_starpu_watchdog_init();
+
 	STARPU_PTHREAD_MUTEX_LOCK(&init_mutex);
 	initialized = INITIALIZED;
 	/* Tell everybody that we initialized */
@@ -984,6 +986,8 @@ void starpu_shutdown(void)
 	starpu_profiling_worker_helper_display_summary();
 
 	_starpu_deinitialize_registered_performance_models();
+
+	_starpu_watchdog_shutdown();
 
 	/* wait for their termination */
 	_starpu_terminate_workers(&config);
